galery page alignment fixed

--- a/lab10/flex-desktop.css
+++ b/lab10/flex-desktop.css
@@ -1,9 +1,10 @@
-@media (max-width:480px){
+@import url(medium.css) (min-width:768px) and (max-width:1279px);
+
+@media (min-width:480px) and (max-width:767px){
     .galery figcaption{
         color: red;
     }
 }
-@import url(figcaption.css) (max-width:768px);
 .container{
     display: flex;
     flex-flow: row wrap;
