--- a/lab10/large.css
+++ b/lab10/large.css
@@ -1,11 +1,4 @@
 .galery figcaption{
-    color:green
+    color:green;
 }
-.galery figure{
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-}
-.galery figure img{
-    width: 100%;
-}
+
